force-app/main/default/objects/Knowledge_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Resources__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Content_Type__c</fullName>
        <description>ADO #123103 - (Create Knowledge base Articles)
Used to find out the Article Content Type</description>
        <formula>IF(AND($User.Department = &quot;PCx&quot;,LEFT(RecordType.Name,3)= &quot;LCC&quot;), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Content Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Created for LCC Articles</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>65536</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detailed_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Detailed Instructions</label>
        <length>65536</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FAQ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guided_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guided Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Help</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Issue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Internal notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Need_More_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Need More Help</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pending_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Support Agent or the Technical Writer will be using this field to flag the Knowledge Article as &quot;Pending Review&quot;</description>
        <label>Pending Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Resolution on Articles.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Search_Meta_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Meta Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upload_Document__c</fullName>
        <label>Upload Document</label>
        <type>File</type>
    </fields>
    <label>Knowledge Article</label>
    <listViews>
        <fullName>Articles_Pending_Review</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>OWNER_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pending_Review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Articles Pending Review</label>
        <sharedTo>
            <group>Technical_Writers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Articles_Ready_for_Approval</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSIGNEDTO_USER</field>
            <operation>equals</operation>
            <value>Knowledge Content Submission</value>
        </filters>
        <label>Articles Ready for Approval</label>
    </listViews>
    <listViews>
        <fullName>Articles_in_Draft_Status</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.PCX_External</value>
        </filters>
        <label>Articles in Draft Status</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OWNER_ID</field>
            <operation>equals</operation>
            <value>00G0R0000018WVb</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <recordTypes>
        <fullName>Knowledge_Content</fullName>
        <active>true</active>
        <label>Knowledge Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>LCC_External</fullName>
        <active>true</active>
        <description>LCC Team Content - External</description>
        <label>LCC External</label>
    </recordTypes>
    <recordTypes>
        <fullName>LCC_Internal</fullName>
        <active>true</active>
        <description>LCC Team Content - Internal</description>
        <label>LCC Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCX_External</fullName>
        <active>true</active>
        <description>PCX Content Team - External</description>
        <label>PCX External</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCX_Internal</fullName>
        <active>true</active>
        <description>PCx Team content - Internal</description>
        <label>PCX Internal</label>
    </recordTypes>
    <validationRules>
        <fullName>Internal_Article_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(CONTAINS(RecordType.Name, &quot;Internal&quot;), AND(CONTAINS(RecordType.Name, &quot;Internal&quot;),IsVisibleInCsp), AND(CONTAINS(RecordType.Name, &quot;External&quot;),NOT(IsVisibleInCsp)))</errorConditionFormula>
        <errorMessage>Please update the &apos;Visible to Customer&apos; checkbox to be consistent with the Article Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publish_Article_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISCHANGED(PublishStatus),IF(AND($User.Department = &quot;PCx&quot;,RecordType.Name = &quot;LCC_Internal&quot;), true, false), false)</errorConditionFormula>
        <errorMessage>PCx Users are not allowed to publish LCC Internal Articles</errorMessage>
    </validationRules>
</CustomObject>