force-app/main/default/objects/Knowledge_Article__kav/validationRules/Internal_Article_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Article_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(CONTAINS(RecordType.Name, &quot;Internal&quot;), AND(CONTAINS(RecordType.Name, &quot;Internal&quot;),IsVisibleInCsp), AND(CONTAINS(RecordType.Name, &quot;External&quot;),NOT(IsVisibleInCsp)))</errorConditionFormula>
    <errorMessage>Please update the &apos;Visible to Customer&apos; checkbox to be consistent with the Article Type.</errorMessage>
</ValidationRule>