force-app/main/default/objects/Knowledge_Article__kav/validationRules/Publish_Article_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Publish_Article_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISCHANGED(PublishStatus),IF(AND($User.Department = &quot;PCx&quot;,RecordType.Name = &quot;LCC_Internal&quot;), true, false), false)</errorConditionFormula>
    <errorMessage>PCx Users are not allowed to publish LCC Internal Articles</errorMessage>
</ValidationRule>