force-app/main/default/objects/Knowledge_Article__kav/listViews/Articles_in_Draft_Status.listView-meta.xml
<ListView>
    <fullName>Articles_in_Draft_Status</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>FIRST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge_Article__kav.PCX_External</value>
    </filters>
    <label>Articles in Draft Status</label>
</ListView>