force-app/main/default/objects/Knowledge_Article__kav/listViews/Articles_Pending_Review.listView-meta.xml
<ListView>
    <fullName>Articles_Pending_Review</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>FIRST_PUBLISHED_DATE</columns>
    <columns>OWNER_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pending_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Articles Pending Review</label>
    <sharedTo>
        <group>Technical_Writers</group>
    </sharedTo>
</ListView>