force-app/main/default/objects/Knowledge_Article__kav/listViews/Articles_Ready_for_Approval.listView-meta.xml
<ListView>
    <fullName>Articles_Ready_for_Approval</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSIGNEDTO_USER</field>
        <operation>equals</operation>
        <value>Knowledge Content Submission</value>
    </filters>
    <label>Articles Ready for Approval</label>
</ListView>